# QuantumArch

./: .flake8  .gitignore  .pylintrc  README.md  create_visual_ppt.py  demo.py  mkdocs.yml  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  run_benchmark.py  setup.py
.codebuddy/plans/: 量子架构核心模型实现计划_6c32b866.md
.github/: pull_request_template.md
.github/workflows/: ci-cd.yml  quality.yml
ai_integration_plan/: cloud_vendor_comparison.md  manufacturing_ai_roadmap.md
benchmark/: __init__.py  compare_optimization.py  full_benchmark.py  performance_benchmark.py  performance_profiler.py  qsa_benchmark.py
design/: __init__.py  architecture.md  automation_system_optimization.md  core_concepts.md  engineering_challenges_and_mitigation.md  multi_domain_extension.md  visualization.html
docs/: comparison.md  index.md  whitepaper.md
docs/core/: overview.md  qci_theory.md  qel_theory.md  qgd_math_and_stability.md  qir_theory.md  qsa_theory.md
engineering/: README.md  __init__.py  architecture_optimization_guide.md  code_quality_system.md  code_quality_verification_report.md  knowledge_sharing_system.md  performance_optimization_guide.md
experiments/: __init__.py  experiment_report.html  experiment_results.json  quick_benchmark.py  run_experiment.py
optimization_system/: README.md  __init__.py  config.py  config.yaml  metrics_exporter.py  optimization_engine.py  requirements.txt  training_pipeline.py
paper_system/: __init__.py  requirements.txt
paper_system/backend/: arxiv_crawler.py  main.py
quantum_core/: __init__.py  activations.py  attention.py  attention_optimized.py  attention_v2.py  circuit_sim.py  collapse.py  complex_ops.py  complex_ops_optimized.py  embedding.py  entanglement.py  error_correction.py  experiment_config.py  ffn.py  interference_router.py  model.py  normalization.py  optimized_trainer.py  optimizer.py  quantum_block.py  quantum_metrics.py  state_init.py  training_callbacks.py  unitary.py
tests/: test_core.py  test_full_suite.py  test_march25_iterations.py  test_march26_iterations.py  test_march27_iterations.py
verification_suite/: __init__.py  test_framework.py
(+4 files in other folders)
