[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "QuantumArch"
version = "0.1.0"
description = "Quantum-Inspired Neural Architecture with Complex-Valued Dynamics"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "maco1979"},
]
urls = {Homepage = "https://github.com/maco1979/QuantumArch"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pyyaml>=6.0",
    "prometheus-client>=0.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "pyright>=1.1.300",
    "isort>=5.12.0",
]

[tool.setuptools.packages.find]
# 解决 flat layout 多包歧义：明确列出所有需要包含的顶层目录
include = [
    "design*",
    "experiments*",
    "engineering*",
    "paper_system*",
    "quantum_core*",
    "verification_suite*",
    "optimization_system*",
]
# 排除不需要打包的目录
exclude = [
    "htmlcov*",
    "tests*",
    "benchmark*",
    "docs*",
]

[tool.pyright]
include = ["quantum_core", "tests", "benchmark", "optimization_system"]
exclude = [
    "**/__pycache__",
    "**/node_modules",
    "**/.pytest_cache",
    "experiments",
    "paper_system",
]
reportMissingImports = true
reportMissingTypeStubs = false
reportOptionalMemberAccess = "warning"
reportGeneralTypeIssues = "warning"
pythonVersion = "3.9"
pythonPlatform = "Linux"
typeCheckingMode = "basic"
stubPath = ""

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
